# table-enum

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
table-enum-core/: Cargo.toml  README.md
table-enum-core/src/: lib.rs  tests.rs
table-enum-macro/: Cargo.toml
table-enum-macro/src/: lib.rs
tests/: integration_tests.rs
