[package]
name = "table-enum-macro"
version = "0.1.0"
edition = "2021"
authors = ["César Santos <cesar.santos.1990@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "You are probably looking for the table-enum crate, which wraps this crate and is much more ergonomic to use."
homepage = "https://github.com/sirwhinesalot/table-enum"
repository = "https://github.com/sirwhinesalot/table-enum"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.64"
table-enum-core = { path = "../table-enum-core" }
